# digest

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  meson.build  pyproject.toml  setup.py  test.cpp
.github/workflows/: clang-format.yml  static.yml
Expected_Density/: ACTG.cpp  CMakeLists.txt  Results.md  non-ACTG.cpp  out1.txt  out2.txt  plotting.py  str_gen.cpp
digest-rs/: Cargo.toml  README.md  build.rs
digest-rs/examples/: demo.rs
digest-rs/src/: bindings.cpp  lib.rs
digest-rs/tests/: minimizer_tests.rs
digester/: CMakeLists.txt
digester/include/Digester/: digester.hpp  window_minimizer.hpp
digester/include/ntHash/: nthash_lowlevel.hpp  status.hpp
digester/src/Digester/: mod_minimizer.cpp
docs/: Doxyfile  build.sh
docs/html/: annotated.html  classdigest_1_1BadConstructionException-members.html  classdigest_1_1BadConstructionException.html  classdigest_1_1BadModException-members.html  classdigest_1_1BadModException.html  classdigest_1_1BadWindowSizeException-members.html  classdigest_1_1BadWindowSizeException.html  classdigest_1_1Digester-members.html  classdigest_1_1Digester.html  classdigest_1_1ModMin-members.html  classdigest_1_1ModMin.html  classdigest_1_1NotRolledTillEndException-members.html  classdigest_1_1NotRolledTillEndException.html  classdigest_1_1Syncmer-members.html  classdigest_1_1Syncmer.html  classdigest_1_1WindowMin-members.html  classdigest_1_1WindowMin.html  classes.html  classthread__out_1_1BadThreadOutParams-members.html  classthread__out_1_1BadThreadOutParams.html  data__structure_8hpp_source.html  digester_8hpp.html  digester_8hpp_source.html  dir_6d5a2e6e14cfb8a9edbe968d405e4bb3.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  md_README.html  mod__minimizer_8hpp_source.html  pages.html  structdigest_1_1ds_1_1Adaptive-members.html  structdigest_1_1ds_1_1Adaptive.html  structdigest_1_1ds_1_1Adaptive64-members.html  structdigest_1_1ds_1_1Adaptive64.html  structdigest_1_1ds_1_1Naive-members.html  structdigest_1_1ds_1_1Naive.html  (+7 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  pages_0.js  searchdata.js
docs/latex/: annotated.tex  classdigest_1_1BadConstructionException.eps  classdigest_1_1BadConstructionException.tex  classdigest_1_1BadModException.eps  classdigest_1_1BadModException.tex  classdigest_1_1BadWindowSizeException.eps  classdigest_1_1BadWindowSizeException.tex  classdigest_1_1Digester.eps  classdigest_1_1Digester.tex  classdigest_1_1ModMin.eps  classdigest_1_1ModMin.tex  classdigest_1_1NotRolledTillEndException.eps  classdigest_1_1NotRolledTillEndException.tex  classdigest_1_1Syncmer.eps  classdigest_1_1Syncmer.tex  classdigest_1_1WindowMin.eps  classdigest_1_1WindowMin.tex  classthread__out_1_1BadThreadOutParams.eps  classthread__out_1_1BadThreadOutParams.tex  data__structure_8hpp_source.tex  digester_8hpp.tex  digester_8hpp_source.tex  files.tex  hierarchy.tex  md_README.tex  mod__minimizer_8hpp_source.tex  refman.tex  structdigest_1_1ds_1_1Adaptive.tex  structdigest_1_1ds_1_1Adaptive64.tex  structdigest_1_1ds_1_1Naive.tex  structdigest_1_1ds_1_1Naive2.tex  structdigest_1_1ds_1_1SegmentTree.tex  syncmer_8hpp_source.tex  thread__out_8hpp_source.tex  window__minimizer_8hpp_source.tex
include/Digester/: digester.hpp  mod_minimizer.hpp  point_update_st.hpp  syncmer.hpp  uni_mini.hpp  window_minimizer.hpp
include/digest/: data_structure.hpp  digester.hpp  digester.tpp  mod_minimizer.hpp  mod_minimizer.tpp  point_update_st.hpp  syncmer.hpp  syncmer.tpp  thread_out.hpp  thread_out.tpp  window_minimizer.hpp  window_minimizer.tpp
include/ntHash/: nthash.hpp  nthash_consts.hpp
include/nthash/: internal.hpp  kmer.hpp
pybind/: bindings.cpp  digest_utils.hpp
src/: digester.cpp  digester.tpp  mod_minimizer.cpp  syncmer.cpp  thread_out.cpp  window_minimizer.cpp
src/Digester/: digester.cpp  mod_minimizer.cpp  syncmer.cpp  uni_mini.cpp  window_minimizer.cpp
src/ntHash/: nthash.cpp  nthash_consts.cpp  nthash_lowlevel.cpp  status.cpp
subprojects/: ntHash.wrap
test/: tests.cpp
test_strings/: A.txt  C.txt  G.txt  N.txt  T.txt  a_lowercase.txt  coronavirus.txt  random.txt  random_lowercase.txt  salmonella_enterica.txt  salmonella_lowercase.txt
tests/: actg_raw_out.txt  bench.txt  bench_seg_tree.cpp  benchmark.cpp  test.cpp  test_thread.cpp
tests/approximation/: approx.py
tests/bench/: bench.txt  benchmark.cpp  out2.txt  str_gen.cpp
tests/benchmark_seg_tree_input/: nums.txt
tests/data_structure/: bench_ds.cpp  out.txt
tests/density/: ACTG.cpp  CMakeLists.txt  Results.md  actg_raw_out.txt  non-ACTG.cpp  non-actg_raw_out.txt  out1.txt  out2.txt  plotting.py  str_gen.cpp
tests/seg_tree/: 2.cpp  bench.txt  bench_seg_tree.cpp  nums2.txt
tests/test/: random.txt  random_N_to_A.txt  random_lowercase.txt  rep_n_w_a.cpp  salmonella_enterica.txt  salmonella_lowercase.txt  test.cpp  test_thread.cpp
