[package]
name = "digest-rs"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for the digest library"
license = "MIT"
repository = "https://github.com/VeryAmazed/digest"
readme = "README.md"
keywords = ["bioinformatics", "kmer", "minimizer", "syncmer"]
categories = ["science", "bioinformatics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "digest"
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2"
thiserror = "1.0"

[build-dependencies]
cc = "1.0"

